# domain/entities/Component.go
@@ -1,0 +1,8 @@
+package entities
+
+// Component entity
+type Component struct {
+	Name  string
+	Count uint32
+	Extra []map[string]interface{}
+}
