# domain/entities/Report.go
@@ -1,0 +1,8 @@
+package entities
+
+// Report entity
+type Report struct {
+	Version    string
+	Title      string
+	Components []Component
+}
